--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Ben Franzoso - You may enter
 ---
+
+<div class="gigantic--overlay"></div>
+
+<div class="gigantic" id="homepage-big">
+  <div class="container-flex">
+    <div class="flex center">
+      <div class="hello">
+        <h1 class="bold">Web. Film. Music. Animals.</h1>
+      </div>
+    </div>
+  </div>
+</div>
+
+<main>
+  <div class="split">
+    <div class="left--overlay"></div>
+    <div class="left">
+      <div class="flex">
+        <img src="/assets/img/logo.svg" alt="" width="300px">
+      </div>
+    </div>
+    <div class="right"></div>
+  </div>
+</main>
