--- a/index.html
+++ b/index.html
@@ -15,6 +15,44 @@ title: Ben Franzoso - You may enter
   </div>
 </div>
 
+<!-- Flexbox Layout -->
+<section class="flex-section-parent">
+
+  <div class="flex-child">
+    <div class="shoutout" id="shoutout1">
+      <div class="flex-container">
+          <div class="shoutout-logo">
+            <img class="shoutout-logo-img" src="/assets/img/logo.svg" alt="">
+          </div>
+      </div>
+    </div>
+    <div class="recent-posts">
+      <div class="text-container">
+        <h2 class="section-heading">Recent Posts</h2>
+        <span class="heading-underline"></span>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex-child">
+    <div class="text">
+      <div class="text-container">
+        <h2 class="section-heading">About</h2>
+        <span class="heading-underline"></span>
+        <p class="section-text">I like building websites, so one day I started a small design
+        shop, ironicly I named it <strong><em>The Small Web Shop</em></strong>.<br><br> Fast forward a year
+        and I'm proud to say me and my partner <strong><em>Max</em></strong> made a pretty cool little business
+        out of it. I still take on freelance work, but my primary focus is <strong><em>TSWS</em></strong>.</p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="flex-child">3</div>
+  <div class="flex-child">4</div>
+</section>
+
+
 <main>
   <div class="split">
     <div class="left--overlay"></div>
