End layout for the night

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Ben Franzoso - You may enter
 <!-- Flexbox Layout -->
 <section class="flex-section-parent">
 
-  <div class="flex-child">
+  <div class="flex-child-half">
     <div class="shoutout" id="shoutout1">
       <div class="flex-container">
           <div class="shoutout-logo">
@@ -34,7 +34,7 @@ title: Ben Franzoso - You may enter
     </div>
   </div>
 
-  <div class="flex-child">
+  <div class="flex-child-half">
     <div class="text">
       <div class="text-container">
         <h2 class="section-heading">About</h2>
@@ -47,9 +47,27 @@ title: Ben Franzoso - You may enter
     </div>
   </div>
 
-
-  <div class="flex-child">3</div>
-  <div class="flex-child">4</div>
+  <div class="flex-child-third">
+    <div class="featured-work" id="featured-work-1">
+      <div class="flex-container">
+        1
+      </div>
+    </div>
+  </div>
+  <div class="flex-child-third">
+    <div class="featured-work" id="featured-work-2">
+      <div class="flex-container">
+        1
+      </div>
+    </div>
+  </div>
+  <div class="flex-child-third">
+    <div class="featured-work" id="featured-work-1">
+      <div class="flex-container">
+        1
+      </div>
+    </div>
+  </div>
 </section>
 
 
