Media queries on flex layout

--- a/index.html
+++ b/index.html
@@ -32,19 +32,35 @@ title: Ben Franzoso - You may enter
     <!-- Recent Posts -->
     <div class="recent-posts">
       <div class="text-container">
-        <h2 class="section-heading">Recent Posts</h2>
-        <span class="heading-underline"></span>
-
+        <div class="heading">
+          <div class="title">
+            <h2 class="section-heading">Recent-Post</h2>
+            <span class="heading-underline"></span>
+          </div>
+          <div class="more">
+            <a href="#">All-POSTS
+              <i class="fa fa-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-
   <!-- Half of page (50% width) -->
   <div class="flex-col-6">
     <div class="about-box">
       <div class="text-container">
-        <h2 class="section-heading">About</h2>
-        <span class="heading-underline"></span>
+        <div class="heading">
+          <div class="title">
+            <h2 class="section-heading">About</h2>
+            <span class="heading-underline"></span>
+          </div>
+          <div class="more">
+            <a href="#">Read-More
+              <i class="fa fa-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
         <p class="section-text">
           Hello, my name is Ben if you couldn't tell already.<br><br>
           I like to build and learn about websites, so day I co-founded
@@ -52,6 +68,13 @@ title: Ben Franzoso - You may enter
           <br><br>Fast forward a year later and I'm proud to annouce my small little design shop
           has grown into a hobby to a full time job.
         </p>
+      </div>
+    </div>
+  </div>
+  <div class="flex-col-12">
+    <div class="text-snippet">
+      <div class="flex-container">
+        <h2>Raw foods will bring you great happiness</h2>
       </div>
     </div>
   </div>
